# callipsos_core

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  design-tradeoffs.md  docker-compose.yml
docs/: conversation-log.md
lit-signer/lit-actions/: validate-and-sign.js
migrations/: 001_inital.sql  003_agent_memory.sql
scripts/: demo.sh
src/: encrypt.rs  error.rs  lib.rs  main.rs
src/db/: conversation.rs  mod.rs  policy.rs  transaction_log.rs  user.rs
src/policy/: engine.rs  mod.rs  presets.rs  rules.rs  test_engine.rs  test_presets.rs  test_rules.rs  types.rs
src/routes/: health.rs  mod.rs  policies.rs  users.rs  validate.rs
src/signing/: lit.rs  mod.rs
tests/: api_health.rs  api_policies.rs  api_users.rs  api_validate.rs
tests/common/: mod.rs
