[package]
name = "callipsos_core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
alloy = {version = "1.7.3", features = ["full"]}
tower-http = "0.6.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate", "tls-rustls-ring-webpki"] }
serde = "1.0.228"
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"]}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"]}
thiserror = "2.0.18"
anyhow = "1.0.102"
dotenvy = "0.15.7"
rig-core = "0.31.0"
rust_decimal = { version = "1.40.0", features = ["serde-with-str"]}
# TODO: Add Teloxide, Coloured


[dependencies.uuid]
version = "1.21.0"
# Lets you generate random UUIDs
features = [
    "v4",
    "serde"
]

[dev-dependencies]
rust_decimal_macros = "1.40.0"